[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/enemies/homing/ghost/GhostEnemy.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/homing/HomingEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemies/homing/ghost/GhostEnemy.png" type="Texture" id=3]
[ext_resource path="res://entities/enemies/homing/ghost/GhostEnemyCollider.tres" type="Shape2D" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[node name="GhostEnemy" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 2

[node name="Collider" parent="." index="1"]
shape = ExtResource( 4 )

[node name="Collider" parent="Hurtbox" index="0"]
shape = ExtResource( 4 )

[node name="SpoopyTimer" type="Timer" parent="." index="5"]
wait_time = 1.5

[node name="FadeAnimator" type="AnimationPlayer" parent="." index="6"]
anims/fade = SubResource( 1 )

[node name="FadeTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
[connection signal="timeout" from="SpoopyTimer" to="." method="_on_SpoopyTimer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]

[editable path="Hurtbox"]
